# llm-cli

./: .gitignore  CHANGELOG.md  IMPLEMENTED_FEATURES.md  README.md  chunking_strategies.py  example.txt  plan.md  pyproject.toml  translation_claude.py
.github/workflows/: publish.yml
cli/: db_utils.py  lazy_imports.py  main.py  utils.py
core/: audio.py  chat.py  chunking_strategies.py  config.py  cut_audio.py  prompt.py
core/agents/: sml_agents.py
llm_cli/: has_markdown.py  main.py  main_extend.py  utils.py
tests/: conftest.py  test_agent.py  test_main.py
tests/core/: test_chat.py  test_config.py
