[tool.poetry]
name = "llm-to-cli"
version = "0.1.5"
description = "simple llm based tools to access from cli"
authors = ["tikendraw <tikendraksahu1029@gmail.com>"]
readme = "README.md"

packages = [
    { include = "cli" },
    { include = "core" },
]

[tool.poetry.dependencies]
python = "^3.11"
litellm = "^1.59.9"
click = "^8.1.8"
rich = "^13.9.4"
smolagents = { version = ">=0.1.0", optional = true }

[tool.poetry.extras]
agents = ["smolagents"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
llm-cli = 'cli.main:cli'
