[project]
name = "llm-to-cli"
version = "0.2.0"
description = "simple llm based tools to access from cli"
authors = [
    { name = "tikendraw", email = "tikendraksahu1029@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "litellm==1.83.7",
    "click>=8.1.8",
    "rich>=13.9.4",
]

[project.optional-dependencies]
agents = ["smolagents>=0.1.0"]
dev = [
    "pytest>=8.3.5",
    "mkdocs>=1.6.1",
]

[project.scripts]
llm-cli = "llm_cli.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["llm_cli", "core"]
